--- a/frontend/src/components/layout/Signup.module.css
+++ b/frontend/src/components/layout/Signup.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -12,15 +12,17 @@
     flex-direction: column;
     flex-wrap: nowrap;
 }
-.Headings{
+
+.Headings {
     display: flex;
     justify-content: center;
     flex-direction: column;
     position: relative;
     top: -20%;
 }
-.header{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+
+.Header {
+    font-family: Georgia, "Times New Roman", Times, serif;
     position: relative;
     font-size: 90%;
     top: 9px;
@@ -28,71 +30,72 @@
     font-size: 25px;
 }
 
-.Forms{
+.Forms {
     position: absolute;
     top: 30%;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap:4px;
+    gap: 4px;
 }
-.ClosingSection{
+
+.closingSection {
     position: relative;
-
-   top: 19%;
-
+    top: 19%;
 }
-#button{
-    background: #122A50;
 
+#button {
+    background: #122a50;
     border-radius: 20px;
     width: 70%;
-    height: 47%; 
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    height: 47%;
+    font-family: Georgia, "Times New Roman", Times, serif;
     color: white;
     font-size: 20px;
 }
-#Content{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+
+#Content {
+    font-family: Georgia, "Times New Roman", Times, serif;
     position: relative;
     top: -10px;
     color: black;
     font-size: 25px;
 }
 
-.Join{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.Join {
+    font-family: Georgia, "Times New Roman", Times, serif;
     position: relative;
     top: -20px;
     color: black;
     font-size: 25px;
-    line-height: 36px
+    line-height: 36px;
 }
 
-.FormName{
+.FormName {
     display: flex;
     font-weight: bold;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
     position: relative;
     color: black;
     font-size: 20px;
 }
-.Input{
-  /* Rectangle 13 */
-/* Rectangle 13 */
-position: relative;
-height:35px;
-width: 300px;
-border-radius: 9px;
-fill: none;
-box-shadow: 90px;
-border: 1px solid #4F4B4B; /* Thinner, lighter border */
-}
-#Name{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+.Input {
     position: relative;
-    color: #4F4B4B;
+    height: 35px;
+    width: 300px;
+    border-radius: 9px;
+    fill: none;
+    box-shadow: 90px;
+    border: 1px solid #4f4b4b;
+    /* Thinner, lighter border */
+}
+
+#Name {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    position: relative;
+    color: #4f4b4b;
     font-weight: 400;
     font-size: 20px;
-  
 }
