--- a/frontend/src/pages/CourseDetails/CourseDetails.module.css
+++ b/frontend/src/pages/CourseDetails/CourseDetails.module.css
@@ -7,30 +7,30 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+.h1 {
   font-size: 2.5rem;
   color: #333;
   margin-bottom: 10px;
 }
 
-p {
+.p {
   font-size: 1.2rem;
   color: #666;
   margin-bottom: 20px;
 }
 
-h2 {
+.h2 {
   font-size: 2rem;
   color: #333;
   margin-bottom: 15px;
 }
 
-ul {
+.ul {
   list-style-type: none;
   padding: 0;
 }
 
-li {
+.li {
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -38,13 +38,13 @@ li {
   margin-bottom: 10px;
 }
 
-li h3 {
+.li .h3 {
   font-size: 1.5rem;
   color: #333;
   margin-bottom: 5px;
 }
 
-li p {
+.li .p {
   font-size: 1rem;
   color: #555;
 }
