--- a/src/components/layout/nav.module.css
+++ b/src/components/layout/nav.module.css
@@ -1,34 +1,34 @@
-.nav{
-    display:flex;
-    flex-direction: row;
-    background-color: #122A50;
-    justify-content: space-between;
+.nav {
+  display: flex;
+  flex-direction: row;
+  background-color: #122a50;
+  justify-content: space-between;
 }
 
-.listContainer{
-    padding-top: 4em;
+.listContainer {
+  padding-top: 4em;
 }
 
-.list{
-    list-style-type:none;
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    right: 2em;
+.list {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  right: 2em;
 }
 
 .listItem {
-    white-space:nowrap;
-    padding: .5em;
+  white-space: nowrap;
+  padding: 0.5em;
 }
 
 a {
-    font-weight: bold;
-    text-decoration: none;
-    color: #ffff;
+  font-weight: bold;
+  text-decoration: none;
+  color: #ffff;
 }
 
-.logo{
-    width: 10em;
-    height: 10em;
+.logo {
+  width: 10em;
+  height: 10em;
 }
