--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,12 +7,12 @@
 * {
   margin: 0;
   padding: 0;
-  font: inherit;
+  /*font: inherit;*/
   /* Get rid of all font sizes and heights */
 }
 
 html {
-  color-scheme: dark light;
+  /*color-scheme: dark light;*/
   /* Default dark */
   hanging-punctuation: first last;
   /* Not supported in Chrome */
