Fix styles for the TeacherDashboardStyles.module.css

--- a/frontend/src/pages/TeacherDashboard/TeacherDashboardStyles.module.css
+++ b/frontend/src/pages/TeacherDashboard/TeacherDashboardStyles.module.css
@@ -42,6 +42,9 @@
         height: 5rem;
         border-bottom: black solid 0.0625rem;
     }
+    img {
+        margin: auto;
+    }
 }
 
 .courseLogo {
