--- a/frontend/src/components/layout/nav.module.css
+++ b/frontend/src/components/layout/nav.module.css
@@ -6,7 +6,7 @@
 }
 
 .listContainer{
-    padding-top: 4%;
+    padding-top: 4em;
 }
 
 .list{
@@ -14,12 +14,12 @@
     display: flex;
     flex-direction: row;
     position: absolute;
-    right: 5%;
+    right: 2em;
 }
 
 .listItem {
     white-space:nowrap;
-    padding: 2%;
+    padding: .5em;
 }
 
 a {
@@ -29,6 +29,6 @@ a {
 }
 
 .logo{
-    width: 15%;
-    height: 15%;
+    width: 10em;
+    height: 10em;
 }
