Updated code based on review comments in UserDashboardPage

--- a/frontend/src/components/layout/nav.module.css
+++ b/frontend/src/components/layout/nav.module.css
@@ -1,4 +1,4 @@
-.nav{
+/* .nav{
     display:flex;
     flex-direction: row;
     background-color: #122A50;
@@ -31,4 +31,4 @@ ul > li > a {
 img{
     width: 15%;
     height: 15%;
-}
+} */
