--- a/src/components/layout/nav.module.css
+++ b/src/components/layout/nav.module.css
@@ -3,23 +3,24 @@
   flex-direction: row;
   background-color: #122a50;
   justify-content: space-between;
+  align-items: center;
+  padding: 0% 2.5%;
 }
 
-.listContainer {
-  padding-top: 4em;
-}
-
-.list {
-  list-style-type: none;
+.navLinksList {
   display: flex;
   flex-direction: row;
-  position: absolute;
-  right: 2em;
 }
 
-.listItem {
-  white-space: nowrap;
-  padding: 0.5em;
+.navLink {
+  margin: 0px 20px;
+  font-weight: 500;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.2em;
+}
+
+.navLink:hover {
+  cursor: pointer;
 }
 
 a {
@@ -29,6 +30,6 @@ a {
 }
 
 .logo {
-  width: 10em;
-  height: 10em;
+  width: 7em;
+  height: 7em;
 }
