--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -1,16 +1,21 @@
 .sideBarContainer {
-  height: 100%;
-  width: 5rem;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sideBarItems {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
+  width: 15rem;
+  height: 100vh;
+  align-items: center;
+  border-right: #122A50 solid 0.063rem;
+  padding: 2rem 0;
+}
+
+.newCourseButton {
+  background-color: transparent;
+  border: black solid 0.1rem;
+  border-radius: 0.625rem;
+  padding: 0.5rem;
+  margin: 2rem 0;
+  width: 10rem;
+  text-align: center;
+  text-decoration: none;
 }
