--- a/src/pages/UserDashboard/UserDashboard.module.css
+++ b/src/pages/UserDashboard/UserDashboard.module.css
@@ -19,6 +19,7 @@
   cursor: pointer;
   font-size: 1rem;
   margin: 0 0.625rem;
+  color: white;
 }
 
 .activeTab {
@@ -65,7 +66,9 @@
   max-width: 18.75rem;
   cursor: pointer;
   color: black;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .courseCard:hover {
