--- a/src/components/layout/Signup.module.css
+++ b/src/components/layout/Signup.module.css
@@ -56,7 +56,7 @@
   white-space: nowrap;
 }
 
-.input {
+.inputField {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
@@ -73,7 +73,7 @@
   text-align: center;
 }
 
-.button {
+.registerButton {
   width: 100%;
   padding: 10px;
   background-color: #122a50;
@@ -88,7 +88,7 @@
   align-items: center;
 }
 
-.button:hover {
+.registerButton:hover {
   background-color: #0f2240;
 }
 
@@ -124,4 +124,11 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: start;
+}
+
+.successMessage {
+  color: green;
+  font-weight: bold;
+  margin-top: 20px;
+  text-align: center;
 }
