--- a/src/pages/CourseDetails/CourseDetails.module.css
+++ b/src/pages/CourseDetails/CourseDetails.module.css
@@ -26,33 +26,34 @@
 }
 
 .lessonsHeading {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #333;
-  margin-bottom: 0.9375rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .lessonsListUl {
+  display: grid; /* Use grid layout */
+  grid-template-columns: 1fr 1fr; /* Two columns */
+  gap: 1.25rem; /* Space between grid items */
   list-style-type: none;
   padding: 0;
 }
 
 .lessonsItem {
-  background-color: #f9f9f9;
+  background-color: #f6e8b6;
   border: 1px solid #ddd;
   border-radius: 0.3125rem;
   padding: 0.9375rem;
-  margin-bottom: 0.625rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .lessonTitle {
   font-size: 1.5rem;
   color: #333;
   margin-bottom: 0.3125rem;
-}
-
-.lesson_materials {
-  font-size: 1rem;
-  color: #555;
 }
 
 .enrollButton {
@@ -73,15 +74,6 @@
   background-color: #0056b3;
 }
 
-.enrollSuccess {
-  margin-top: 1.25rem;
-  padding: 0.625rem;
-  background-color: #e0f9ff;
-  border: 1px solid #007bff;
-  border-radius: 0.25rem;
-  color: #333;
-}
-
 .goToCourseButton {
   background-color: #0b2056;
   color: white;
@@ -94,6 +86,25 @@
 
 .goToCourseButton:hover {
   background-color: #80d4ec;
+}
+
+.loadingSpinner {
+  border: 4px solid rgba(0, 0, 0, 0.1); /* Light gray background */
+  border-top: 4px solid #007bff; /* Blue color for the spinner */
+  border-radius: 50%; /* Make it round */
+  width: 40px; /* Width of the spinner */
+  height: 40px; /* Height of the spinner */
+  animation: spin 1s linear infinite; /* Spin animation */
+  margin: 0 auto; /* Center the spinner horizontally */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* Responsive styles for smaller screens */
@@ -115,6 +126,7 @@
   .enrollSuccessMessage {
     font-size: 1rem;
   }
+
   .lessonsHeading {
     font-size: 1.5rem;
   }
@@ -136,6 +148,10 @@
     padding: 0.5rem 0.9375rem;
     font-size: 0.9rem;
   }
+
+  .lessonsListUl {
+    grid-template-columns: 1fr; /* One column on smaller screens */
+  }
 }
 
 @media (max-width: 480px) {
@@ -151,6 +167,7 @@
   .courseDescription {
     font-size: 0.9rem;
   }
+
   .enrollSuccessMessage {
     font-size: 0.9rem;
   }
@@ -167,10 +184,7 @@
     font-size: 1rem;
   }
 
-  .lesson_materials {
-    font-size: 0.8rem;
-  }
-
+  
   .enrollButton,
   .goToCourseButton {
     padding: 0.375rem 0.75rem;
