--- a/src/pages/UserDashboard/Profile.module.css
+++ b/src/pages/UserDashboard/Profile.module.css
@@ -11,26 +11,42 @@
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
 }
 
+.profileContainer > h2{
+  color:#f35c3c;
+  padding: .5em;
+}
 .profileImage {
   width: 9.375rem;
   height: 9.375rem;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 1.25rem;
-  border: 0.125rem solid #007bff;
+  border: 0.125rem solid #122a50;
 }
 
-.profileDetails {
-  text-align: left;
-  width: 100%;
+.form{
+  display:flex;
+  flex-direction: column;
 }
 
-.profileDetails p {
-  font-size: 1rem;
-  color: #333;
-  margin-bottom: 0.5rem;
+.inputContainer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.input{
+  padding: .5em;
+  border-radius: .5em;
+  border-width: .1em;
 }
 
-.profileDetails strong {
-  color: #007bff;
+.label{
+  color:#122a50;
+  padding:1em;
+  font-size: 1em;
+  font-weight: bolder;
+}
+
+.submit{
+  color:#122a50;
 }
