--- a/src/components/layout/ForgotPassWordForm.module.css
+++ b/src/components/layout/ForgotPassWordForm.module.css
@@ -79,35 +79,61 @@
 /* Wrapper to center the form */
 .pageContainer {
     display: flex;
-    align-items: center;
-    background-color: #f7f7f7;
-    flex-wrap: wrap;
     justify-content: space-evenly;
-    flex-direction: column-reverse;
+    align-items: center;
+    flex-direction: column;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 400px;
-    padding: 40px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.5);
-    z-index: 1;
     background-color: #f7f7f7;
-    /* Light background for contrast */
+    padding: 2.5rem;
+    /* 40px -> 2.5rem */
+    width: 25rem;
+    /* 400px -> 25rem */
+    border-radius: 0.5rem;
+    /* 8px -> 0.5rem */
+    box-shadow: 0.0625rem 0px 1.25rem rgba(0, 0, 0, 0.5);
+    /* 1px 0px 20px -> 0.0625rem 0px 1.25rem */
+    z-index: 1;
 }
 
 /* Styling for the ForgotPassword form container */
 .formContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #f7f7f7;
+    padding: 2.5rem;
+    /* 40px -> 2.5rem */
+    width: 25rem;
+    /* 400px -> 25rem */
+    border-radius: 0.5rem;
+    /* 8px -> 0.5rem */
+    box-shadow: 0.0625rem 0px 1.25rem rgba(0, 0, 0, 0.5);
+    z-index: 1;
 
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 100%;
+}
+
+.closeFormButton {
+    color: red !important;
+    font-weight: bold !important;
+    background: none !important;
+    border: none !important;
+    position: relative !important;
+    transform: translate(-150px, -5px) !important;
+}
+
+
+.SetPassWordId {
+    font-size: 2.5rem;
+    /* 24px -> 1.5rem */
+    font-weight: bold;
+    color: #f65e39;
+    margin-bottom: 0.625rem;
 }
