--- a/src/components/layout/nav.module.css
+++ b/src/components/layout/nav.module.css
@@ -10,6 +10,8 @@
 .navLinksList {
   display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .navLink {
@@ -30,11 +32,18 @@ a {
   color: #ffff;
 }
 
-.navLink.active{
-  color:#f35c3c;
+.navLink.active {
+  color: #f35c3c;
 }
 
 .logo {
   width: 7em;
   height: 7em;
+}
+
+@media (max-width: 576px) {
+  .navLink {
+    margin: 0px 10px;
+    font-size: 1em;
+  }
 }
