--- a/src/pages/UserDashboard/Courses.module.css
+++ b/src/pages/UserDashboard/Courses.module.css
@@ -1,33 +1,33 @@
 .coursesContainer {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 1.25rem;
   padding: 1.25rem;
   background-color: #eef2f3;
 }
-.searchContainer{
+.searchContainer {
   display: flex;
   flex-direction: column;
   background-color: #eef2f3;
 }
-.form > h2{
-  color:#f35c3c;
+.form > h2 {
+  color: #f35c3c;
   padding: 1em;
 }
 
-.searchInput{
+.searchInput {
   padding: 1em;
   background-color: #ffffff;
-  border-style:none;
+  border-style: none;
   border-radius: 0px 0px 2px 2px;
-  border-bottom: 3px solid #f35c3c; 
+  border-bottom: 3px solid #f35c3c;
   width: 30em;
   margin: 1em;
-
 }
 
-.submit{
-  padding:1em;
+.submit {
+  padding: 1em;
 }
 .courseCard {
   display: flex;
