User feedback and Course info page (#50)
* Added CourseInfo Page

* small changes

* User dashboard (#42)

* add in search bar and and api call

* feat: Implement user profile update functionality

- Modified updateUserProfile in userController.mjs to update Firebase Authentication and Firestore
- Added static update method to UsersModel.mjs for Firestore updates

* final additions

* changes per comments

---------

Co-authored-by: EdithHarrison <36203185+EdithHarrison@users.noreply.github.com>

* Made changes in UserFeedback page

* Made samll changes

* added CourseInfo and UserFeedback page

* Made changes after review

* Made changes after review-2

* resolved Object object in SignUp page

---------

Co-authored-by: Laura <laura.duranvelaz@gmail.com>
Co-authored-by: EdithHarrison <36203185+EdithHarrison@users.noreply.github.com>

--- a/src/pages/UserDashboard/Courses.module.css
+++ b/src/pages/UserDashboard/Courses.module.css
@@ -6,11 +6,20 @@
   padding: 1.25rem;
   background-color: #eef2f3;
 }
+
 .searchContainer {
+
   display: flex;
   flex-direction: column;
   background-color: #eef2f3;
 }
+
+.form > h2{
+  color:#f35c3c;
+  padding: 1em;
+}
+
+
 .form > h2 {
   color: #f35c3c;
   padding: 1em;
@@ -28,6 +37,7 @@
 
 .submit {
   padding: 1em;
+
 }
 .courseCard {
   display: flex;
