--- a/src/pages/Learn/CourseInfo.module.css
+++ b/src/pages/Learn/CourseInfo.module.css
@@ -4,7 +4,7 @@
   color: #333;
   max-width: 62.5rem;
   margin: 0 auto;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-radius: 0.5rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
 }
