--- a/src/pages/Learn/UserFeedback.module.css
+++ b/src/pages/Learn/UserFeedback.module.css
@@ -3,6 +3,7 @@
   padding: 1.25rem; 
   max-width: 37.5rem; 
   background-color: #f9f9f9;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-radius: 0.5rem; 
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1); 
 }
