--- a/src/pages/UserDashboard/UserDashboard.module.css
+++ b/src/pages/UserDashboard/UserDashboard.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #f4f4f4;
 }
 
